--- a/login-ui.html
+++ b/login-ui.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+
+        <form id="login">
+
+            <h1>Sign in</h1>
+            <input id="username" type="text" name="login" placeholder="username" minlength="8">
+            <br>
+            <input id="password" type="password" name="login" placeholder="password" minlength="8">
+            <br>
+            <button type="submit">Sign in</button>       
+
+        </form>   
     
+    </div>
 </body>
 </html>
